# backend.ai-test

./: .gitignore  MANIFEST.in  README.md  env-tester.sh  setup.cfg
requirements/: dev.txt
src/ai/backend/test/cli/: __main__.py
src/ai/backend/test/cli_integration/: conftest.py
src/ai/backend/test/cli_integration/admin/: test_domain.py  test_group.py  test_image.py  test_keypair.py  test_keypair_resource_policy.py  test_scaling_group.py  test_storage.py  test_user.py
src/ai/backend/test/cli_integration/user/: test_vfolder.py
src/ai/backend/test/new_cli_integration/: __init__.py  conftest.py
src/ai/backend/test/new_cli_integration/user/: test_user.py
src/ai/backend/test/utils/: cli.py
