[metadata]
name = backend.ai-test
version = attr: ai.backend.test.__version__
description = Backend.AI testing toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/backend.ai-test
author = Lablup Inc.
author_email = devops@lablup.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find_namespace:
include-package-data = true
python_requires = >=3.9
setup_requires =
    setuptools>=46.1.0
install_requires =
    click~=8.0.1
    faker~=13.12.0
    pytest~=6.2.1
    pytest-dependency
    backend.ai-cli~=0.3
    attrs~=21.2.0
    pexpect~=4.8

[options.packages.find]
where = src
include =
    ai.backend.test
    ai.backend.test.cli

[options.package_data]
ai.backend.test = py.typed

[options.extras_require]
build =
    setuptools>=46.1.0
    wheel>=0.36.2
    twine>=3.4.1
    towncrier>=19.2.0
test =
    # pytest is in the main requirements
lint =
    flake8>=3.8.1
typecheck =
    mypy>=0.902
    types-click
dev =

[options.entry_points]
backendai_cli_v10 =
    test = ai.backend.test.cli.__main__:main

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 125
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic,*.pyi

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that spawn Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = stubs,src
namespace_packages = true
explicit_package_bases = true
